chore(deps): Major versions bumps + test suite (#29)
* fix(deps): update major updates
* fix: LTS eslint
* fix: drop deprecated baseUrl in TS6
* fix: migrate to @tailwind/postcss for Tailwind v4
* fix: replace flyway-core with spring-boot-starter-flyway for SB4
        -> Spring Boot 4.x no longer auto-configures Flyway with flyway-core alone.
        -> The dedicated starter is required to trigger migration before JPA validation.
* fix: migrate index.css and tailwind.config to Tailwind v4
* tests: add frontend/backend test suites ad fix major-version breakage
* tests: add github frontend test execution

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Quentin Lévêque <qleveque21@gmail.com>